# qtx

./: CMakeLists.txt  wtf.txt
include/: qmake.conf  qplatformdefs.h
include/QtCore/: qvariantanimation.h
include/QtGui/: qframeless.h
qmake/: CMakeLists.txt  main.cpp  option.cpp  project.cpp  property.cpp  property.h
qmake/generators/: projectgenerator.cpp
src/: CMakeLists.txt
src/3rd/: CMakeLists.txt
src/3rd/harfbuzz/: CMakeLists.txt  harfbuzz-shaper-private.h  harfbuzz-shaper.cpp
src/3rd/libpng/: CMakeLists.txt
src/3rd/zlib/: CMakeLists.txt  gzguts.h  zlib.h  zutil.h
src/corelib/: CMakeLists.txt  install.cmake
src/corelib/global/: qconfig.cpp  qconfig.h  qfeatures.h  qglobal.cpp  qglobal.h  qlibraryinfo.cpp  qlibraryinfo.h
src/corelib/io/: qbuffer.cpp  qfilesystemwatcher.cpp  qtextstream.cpp
src/corelib/kernel/: qabstracteventdispatcher.h  qabstractitemmodel.cpp  qcoreapplication.cpp  qcoreapplication.h  qcoreapplication_p.h  qeventdispatcher_win.cpp  qeventdispatcher_win_p.h  qmetatype.cpp  qobject.cpp  qsharedmemory.cpp  qsharedmemory_p.h  qsignalmapper.cpp  qsystemsemaphore_win.cpp  qtimer.cpp  qvariant.cpp  qvariant.h
src/corelib/plugin/: qfactoryloader.cpp  qfactoryloader_p.h  qlibrary.cpp  qlibrary.h  qpluginloader.cpp  qpluginloader.h
src/corelib/plugin/tmp/: qfactoryinterface.cpp  qfactoryloader.cpp  qlibrary_win.cpp
src/corelib/tools/: qchar.cxx  qdatetime.cpp  qharfbuzz.cpp  qharfbuzz_p.h  qregexp.cpp  qregexp.h  qstring.cpp  qstringmatcher.cxx  qunicodetables.cxx
src/corelib/xml/: qxmlutils.cpp
src/gui/: CMakeLists.txt  install.cmake
src/gui/dialogs/: qdialog.cpp  qfiledialog.cpp  qfiledialog_win.cpp  qframeless.cpp  qframeless.h  qframeless_win.cpp  qframeless_win_p.h
src/gui/image/: qicon.cpp  qimagereader.cpp  qimagewriter.cpp  qpicture.cpp  qpnghandler.cpp  qxpmhandler.cpp
src/gui/itemviews/: qsortfilterproxymodel.cpp  qsortfilterproxymodel.h
src/gui/kernel/: qapplication.cpp  qapplication_win.cpp  qevent.cpp  qevent.h  qguivariant.cpp  qkeysequence.cpp  qkeysequence.h  qkeysequence_p.h  qwidget.cpp  qwidget_p.h  qwidget_win.cpp
src/gui/painting/: qcups.cpp  qpaintengine_raster_p.h  qregion.cpp  qregion_p.h  qregion_win.cxx
src/gui/painting/tmp/: qpdf.cpp
src/gui/styles/: qcommonstyle.cpp  qstyle.cpp  qstyle.h  qstyle.qrc  qstylefactory.cpp  qstylehelper_p.h  qstylesheetstyle.cpp  qwindowsstyle.cpp  qwindowsvistastyle.cpp
src/gui/text/: qabstractfontengine_qws.cpp  qcssparser.cpp  qfont.cpp  qfont.h  qfont_p.h  qfontdatabase.cpp  qfontdatabase_win.cxx  qfontengine.cpp  qfontengine_p.h  qfontengine_win.cpp  qfontenginedirectwrite.cpp  qfontinfo.h  qtextcontrol.cpp  qtextdocument.cpp  qtextdocument.h
src/gui/util/tmp/: qundoview.h
src/gui/widgets/: qlinecontrol.cpp  qwidgetanimator.cpp  qwidgetanimator_p.h
src/plugins/: CMakeLists.txt
src/plugins/iconengines/svgiconengine/: CMakeLists.txt
src/plugins/imageformats/: CMakeLists.txt
src/plugins/imageformats/jpeg/: CMakeLists.txt  main.cpp  qjpeghandler.cpp
src/plugins/imageformats/svg/: CMakeLists.txt
src/svg/: CMakeLists.txt  install.cmake  qsvghandler.cpp  qsvghandler_p.h
src/tools/: CMakeLists.txt
src/tools/moc/: CMakeLists.txt  generator.cpp  moc.cpp
src/tools/rcc/: CMakeLists.txt  rcc.cpp
src/tools/uic/: CMakeLists.txt  main.cpp
src/winmain/: CMakeLists.txt
src/xml/: CMakeLists.txt  install.cmake
src/xml/sax/: qxml.cpp
test/: CMakeLists.txt  MainDlg.cpp  MainDlg.h  WindowBar.cpp  WindowBar.h  WindowBtn.cpp  WindowBtn.h  main.cpp  qtest.qrc
